--- a/order.html
+++ b/order.html
@@ -145,7 +145,7 @@
                 <img src="./images/1.png" alt="">
             </div>
         </div>
-        <a class="phone-btn" href="tel:"><i class="fa-solid fa-phone"></i></a>
+        <a class="phone-btn" href="tel:0561679861"><i class="fa-solid fa-phone"></i></a>
     </div>
 
     <script>
